--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "lord-icon-element": "^4.0.3",
     "lottie-web": "^5.10.2",
     "moment": "^2.29.4",
-    "sass": "^8.0.0",
     "nouislider-react": "^3.4.1",
     "prismjs": "^1.29.0",
     "quill": "^1.3.7",
@@ -64,6 +63,7 @@
     "react-filepond": "^7.1.2",
     "react-flatpickr": "^3.10.13",
     "react-i18next": "^12.2.0",
+    "react-icons": "^5.0.1",
     "react-jvectormap": "^0.0.16",
     "react-leaflet": "^4.2.0",
     "react-masonry-css": "^1.0.16",
@@ -85,6 +85,7 @@
     "redux": "^4.2.1",
     "redux-saga": "^1.2.2",
     "remixicon-react": "^1.0.0",
+    "sass": "^8.0.0",
     "save": "^2.9.0",
     "simplebar-react": "^3.2.1",
     "styled-components": "^5.3.6",
