--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fullcalendar/interaction": "^6.1.4",
     "@fullcalendar/list": "^6.1.4",
     "@fullcalendar/react": "^6.1.4",
+    "@reduxjs/toolkit": "^2.2.1",
     "@simonwep/pickr": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -43,7 +44,6 @@
     "lord-icon-element": "^4.0.3",
     "lottie-web": "^5.10.2",
     "moment": "^2.29.4",
-    "sass": "^8.0.0",
     "nouislider-react": "^3.4.1",
     "prismjs": "^1.29.0",
     "quill": "^1.3.7",
@@ -83,8 +83,10 @@
     "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.6",
     "redux": "^4.2.1",
-    "redux-saga": "^1.2.2",
+    "redux-saga": "^1.3.0",
+    "redux-thunk": "2.4.2",
     "remixicon-react": "^1.0.0",
+    "sass": "^8.0.0",
     "save": "^2.9.0",
     "simplebar-react": "^3.2.1",
     "styled-components": "^5.3.6",
