--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^36.0.1",
     "@ckeditor/ckeditor5-react": "^5.1.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.12",
     "@fullcalendar/bootstrap": "^6.1.4",
     "@fullcalendar/core": "^6.1.4",
     "@fullcalendar/daygrid": "^6.1.4",
     "@fullcalendar/interaction": "^6.1.4",
     "@fullcalendar/list": "^6.1.4",
     "@fullcalendar/react": "^6.1.4",
+    "@mui/lab": "^5.0.0-alpha.168",
+    "@mui/material": "^5.15.13",
+    "@mui/x-date-pickers": "^6.19.7",
     "@reduxjs/toolkit": "^2.2.1",
     "@simonwep/pickr": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -68,6 +74,7 @@
     "react-jvectormap": "^0.0.16",
     "react-leaflet": "^4.2.0",
     "react-masonry-css": "^1.0.16",
+    "react-material-ui-form-validator": "^3.0.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-quilljs": "^1.3.3",
     "react-rangeslider": "^2.2.0",
