update left sidebar - initial

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,7 +24,7 @@
       "sizes": "16x16"
     },
     {
-      "src": "%PUBLIC_URL%/favicon/logo512.png",
+      "src": "%PUBLIC_URL%/favicon/logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
